# python-dev-base

./: Dockerfile  README.md  docker-compose.development.yml  docker-compose.production.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: crud.py  database.py  hoge.py  main.py  models.py  sample.py
