[tool.poetry]
name = "backend"
version = "0.1.0"
description = "test"
authors = ["NOne"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
extend-ignore = "E203"
target-version = ['py310']

[tool.mypy]
python_version = "^3.10"
disallow_any_explicit = true
warn_unreachable = true
warn_unused_configs = true

